# libtpa

./: .gitignore  Makefile  tpa.cfg
bindings/: Cargo.toml  bindings.h  build.rs  tpa.cfg
bindings/src/: lib.rs  test.rs  wrapper.rs
buildtools/: build-dpdk.sh  build-rdma-core.sh  vars.mk
include/: packet.h  sock.h  sock_table.h  tcp.h  trace_declare.h  tx_desc.h
include/api/: tpa.h
src/: Makefile  ctrl.c  dev.c  dpdk.c  offload.c  sock.c  tpa.c
src/tcp/: tcp_input.c  tcp_output.c
swing/: Makefile
test/unit/: test_utils.c
