[package]
name = "libtcp"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
build-deps = "0.1.4"
proc-macro2 = "1.0.66"
anyhow = "1.0.86"
pkg-config = "0.3.30"

[[bin]]
name = "test"
path = "src/test.rs"
required-features=["standalone"]

[features]
standalone = []
